--- a/src/230104_panda_network_inputs.Rmd
+++ b/src/230104_panda_network_inputs.Rmd
@@ -24,10 +24,10 @@ knitr::opts_chunk$set(echo = TRUE)
     my laptop(on cheaha)
     
     GitHub Repo:
-    Sex_Bias_Adverse_Events
+    230321_JLF_Sex_bias_adverse_events
     
     Directory of operations:
-    /data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events
+    /data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events
     
     Scripts being edited for operations:
     NA
@@ -45,7 +45,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Set working directory 
 ```{r}
 #change this path to match your paths 
-dir_path <- "/data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events/"
+dir_path <- "/data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events/"
 ```
 
 ### load in data
@@ -89,7 +89,7 @@ download.file('https://stringdb-static.org/download/protein.info.v11.5/9606.prot
 make sure to unzip file outside the script
 
 ```{r}
-ppi_protein_info<- t(as.data.frame( strsplit(readLines("/data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events/data/panda_input_data/9606.protein.info.v11.5.txt"), "\t")))
+ppi_protein_info<- t(as.data.frame( strsplit(readLines(paste0(dir_path,"data/panda_input_data/9606.protein.info.v11.5.txt")), "\t")))
 ppi_protein_info <- as.data.frame(ppi_protein_info)
 ```
 
@@ -121,7 +121,7 @@ symbol_ppi_table$scores <- as.numeric(symbol_ppi_table$scores)
 
 
 ```{r eval =FALSE}
-saveRDS(symbol_ppi_table, "/data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events/data/panda_input_data/230104_symbol_ppi_network_11_5_0.rds")
+saveRDS(symbol_ppi_table, paste0(dir_path,"data/panda_input_data/230104_symbol_ppi_network_11_5_0.rds"))
 ```
 
 ```{r}
@@ -198,11 +198,11 @@ Done in script
     
 # END
     Location of final scripts:
-    scripts
+    scr
   
     
     Location of data produced:
-    /data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events/data/panda_input_data
+    /data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events/data/panda_input_data
     
     Dates when operations were done:
     230104
