--- a/src/230109_sex_specific_tissue_networks.Rmd
+++ b/src/230109_sex_specific_tissue_networks.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(echo = TRUE)
     "/data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events"
     
     Scripts being edited for operations:
-    created a new function xx in the sex_bias_functions.R for the data wrangling 
+    created a new function in the sex_bias_functions.R for building the sex-specific networks
     
     Data being used: 
     the proccessed gene expression from the ./output/proccessed_normalized_expression and meta data from the 210806_GTEx_Age_Sex.Rmd script
@@ -49,7 +49,7 @@ dir_path <- "/data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse
 
 
 ```{r}
-source(paste0(dir_path, "script/sex_bias_drug_functions.R"))
+source(paste0(dir_path, "src/sex_bias_drug_functions.R"))
 library(Biobase)
 library(netZooR)
 ```
@@ -84,26 +84,26 @@ tissues <- unique(metadata$gtex.smtsd)
 #remove cell tissues
 tissues <- tissues[! grepl("Cell", tissues)]
 ```
-note processed data had the white sapce removed 
+note processed data had the white space removed 
 ```{r}
 tissues_wo_ws <- gsub(" ", "_", tissues, fixed = TRUE)
 ```
 
 
-```{r}
+```{r eval=FALSE}
 for (i in 1:length(tissues_wo_ws)){
   
   print(tissues[i])
-  file_name <- paste(paste0(dir_path, "output/lioness/processed_normalized_expression/"), tissues_wo_ws[i], "_gtex_processed_expression.rds",sep = "")
+  file_name <- paste(paste0(dir_path, "results/lioness/processed_normalized_expression/"), tissues_wo_ws[i], "_gtex_processed_expression.rds",sep = "")
   #print(file_name)
   expression <- readRDS(file_name)
   
-  tisssue_meta_file <- paste(paste0(dir_path, "data/gtex_qsmooth/"), tissues[i], "_gtex_metadata.rds", sep = "")
+  tisssue_meta_file <- paste(paste0(dir_path, "results/gtex_qsmooth/"), tissues[i], "_gtex_metadata.rds", sep = "")
   tisssue_meta <- readRDS(tisssue_meta_file)
   
-  file_male <- paste(paste0(dir_path, "output/alpaca/sex_specific_networks/"), tissues_wo_ws[i], "_M_panda.rds", sep = "")
+  file_male <- paste(paste0(dir_path, "results/alpaca/sex_specific_networks/"), tissues_wo_ws[i], "_M_panda.rds", sep = "")
   
-  file_female <- paste(paste0(dir_path, "output/alpaca/sex_specific_networks/"), tissues_wo_ws[i], "_F_panda.rds", sep = "")
+  file_female <- paste(paste0(dir_path, "results/alpaca/sex_specific_networks/"), tissues_wo_ws[i], "_F_panda.rds", sep = "")
   
   try(sex_networks(expression, 
                    tisssue_meta, 
@@ -119,11 +119,11 @@ Done in script
     
 # END
     Location of final scripts:
-    scripts
+    src
   
     
     Location of data produced:
-    /data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events/data/panda_input_data
+    /data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events/results/alpaca/sex_specific_networks
     
     Dates when operations were done:
     230104
