--- a/src/230130_alpaca_sex_tissues.Rmd
+++ b/src/230130_alpaca_sex_tissues.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # START 
     Goal/Purpose of operations: 
-    I need to convert the data format of the sex specific tissue networks outputs to longer by dataframes for alpaca differential community analysis 
+    I need to convert the data format of the sex specific tissue networks outputs to longer by dataframes for alpaca differential community analysis and then run the alpaca analysis.
     
     Finished psedocode on:
     230130
@@ -23,16 +23,16 @@ knitr::opts_chunk$set(echo = TRUE)
     Cheaha
     
     GitHub Repo:
-    Sex_Bias_Adverse_Events
+    230321_JLF_Sex_bias_adverse_events
     
     Docker/Singularity: 
     rstudio_sex_bias_drugs
     
     Directory of operations: 
-    "/data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events"
+    "/data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events"
     
     Scripts being edited for operations:
-    created a new function xx in the sex_bias_functions.R for the data wrangling 
+    created a new functions in the sex_bias_functions.R for the data wrangling and the alpaca analysis
     
     Data being used: 
     the sex -spcific tissue networks from ./output/alpaca/sex_specific_networks
@@ -44,12 +44,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Set working directory 
 ```{r}
 #change this path to match your paths 
-dir_path <- "/data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events"
+dir_path <- "/data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events"
 ```
 
 
 ```{r}
-source(paste0(dir_path, "/script/sex_bias_drug_functions.R"))
+source(paste0(dir_path, "/src/sex_bias_drug_functions.R"))
 library(tidyverse)
 library(netZooR)
 ```
@@ -62,15 +62,15 @@ metadata <- readRDS(paste0(dir_path, "/data/metadata_gtex_filter_samples.rds"))
 
 tissues <- unique(metadata$gtex.smtsd)
 #remove cell tissues
-tissues<- tissues[! grepl("Cell", tissues)]
+tissues <- tissues[! grepl("Cell", tissues)]
 ```
-note processed data had the white sapce removed 
+note processed data had the white space removed 
 ```{r}
 tissues_wo_ws <- gsub(" ", "_", tissues, fixed = TRUE)
 ```
 
 ```{r}
-panda_output_files <- list.files(paste0(dir_path, "/output/alpaca/sex_specific_networks"))
+panda_output_files <- list.files(paste0(dir_path, "/results/alpaca/sex_specific_networks"))
 ```
 
 create input files for alpaca analysis (male then female)
@@ -103,19 +103,19 @@ for (i in seq(1, 86, by =2)){
 
 
 ```{r}
-panda_adjusted_files <- list.files(paste0(dir_path, "/output/alpaca/alpaca_adjusted_inputs"))
+panda_adjusted_files <- list.files(paste0(dir_path, "/results/alpaca/alpaca_adjusted_inputs"))
 ```
 
 ```{r eval = FALSE}
 # female specific communities
 for (i in 1:length(panda_adjusted_files)){
   print(panda_adjusted_files[i])
-  input<- readRDS(paste0(paste0(dir_path, "/output/alpaca/alpaca_adjusted_inputs/"),  panda_adjusted_files[i], sep = ""))
+  input<- readRDS(paste0(paste0(dir_path, "/results/alpaca/alpaca_adjusted_inputs/"),  panda_adjusted_files[i], sep = ""))
   
   tissue_name <- unlist(str_split(panda_adjusted_files[i], "__")[[1]])[1]
   print(tissue_name)
   
-  file_header<- paste0(paste0(dir_path, "/output/alpaca/alpaca_run/"),  tissue_name, "_",sep = "")
+  file_header<- paste0(paste0(dir_path, "/results/alpaca/alpaca_run/"),  tissue_name, "_",sep = "")
   
   regnet_sex_alp<- alpaca(input, file_header, verbose = TRUE)
 }
@@ -126,12 +126,12 @@ for (i in 1:length(panda_adjusted_files)){
 #change the order for male specific communities
 for (i in 1:length(panda_adjusted_files)){
   print(panda_adjusted_files[i])
-  input<- readRDS(paste0(paste0(dir_path, "/output/alpaca/alpaca_adjusted_inputs/"),  panda_adjusted_files[i], sep = ""))
+  input<- readRDS(paste0(paste0(dir_path, "/results/alpaca/alpaca_adjusted_inputs/"),  panda_adjusted_files[i], sep = ""))
   input_adj<- input[,c(1,2,4,3)]
   tissue_name <- unlist(str_split(panda_adjusted_files[i], "__")[[1]])[1]
   print(tissue_name)
   
-  file_header<- paste0(paste0(dir_path, "/output/alpaca/alpaca_run/"),  tissue_name, "female", "male" , "_",sep = "")
+  file_header<- paste0(paste0(dir_path, "/results/alpaca/alpaca_run/"),  tissue_name, "female", "male" , "_",sep = "")
   
   regnet_sex_alp_flipped<- alpaca(input_adj, file_header, verbose = TRUE)
 }
@@ -147,7 +147,7 @@ Done in script
   
     
     Location of data produced:
-    /data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events/output/lioness/adjusted_lioness_outputs
+    /data/project/lasseigne_lab/JLF_scratch/Sex_Bias_Adverse_Events/results/lioness/adjusted_lioness_outputs
     
     Dates when operations were done:
     230130
