--- a/src/220722_Meddra_mapping.Rmd
+++ b/src/220722_Meddra_mapping.Rmd
@@ -15,8 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # START 
     Goal/Purpose of operations: 
-    THE FARES adverse event data was download from FDA open July 2021. this data was data wrangled to create R dataframe with the case number, sex (if the case didn't have a sex it was removed), age (if age was not reported the age is NA), number of drugs that the person was on and drug and possible side effect. It is important to note that the FARES database does not require causal relationship for side effect to reported any anyone can report a case. 
-    The goal of this script is to combine the data frame investigate the data by plot the different metrics. Also, I want to calculate the reporting odds ratio. 
+    The goal of this script is to mapp the Meddra terms from the lowest level to the highest level for downstream mapping of adverse events in FARES database
     
     Started psedocode on: 
     220722
@@ -25,24 +24,23 @@ knitr::opts_chunk$set(echo = TRUE)
     my laptop with a docker
     
     GitHub Repo:
-    Sex_Bias_Adverse_Events
+    230321_JLF_Sex_bias_adverse_events
     
     Docker:
-    jenfisher7/rstudio_sex_bias_analysis
+    jenfisher7/rstudio_sex_bias_drugs
     
     Directory of operations: 
-    /Users/jenniferfisher/Documents/Sex_Bias_Adverse_Events:/home/rstudio/
+    /Users/jenniferfisher/Documents/230321_JLF_Sex_bias_adverse_events
     
     Scripts being edited for operations: 
     NA
     
     Data being used:description and location
-    FARES/FDA_open: description in the goal statement. data/FDA_OPEN
+    MedDRA database in July 2022 version 25.0
+    https://www.meddra.org/how-to-use/basics/hierarchy
     
     Papers and tools:
-    FARES
-    report odds ratio
-    AE_mapping
+    NA
 
 # STEPS
 ### Set working directory 
@@ -51,7 +49,7 @@ setwd("/home/rstudio")
 ```
 
 ```{r}
-source("./sex_bias_functions.R")
+source("~/src/sex_bias_drug_functions.R")
 library(ggplot2)
 library(viridis)
 ```
@@ -60,6 +58,7 @@ library(viridis)
 ### load in data
 
 create the meddra term mapping 
+https://www.meddra.org/how-to-use/basics/hierarchy
 ```{r}
 #lowest_level_term
 llt_meddra<- read.delim("~/data/MedDRA_25_0_English/MedAscii/llt.asc", sep="$", header= FALSE)
@@ -74,7 +73,7 @@ soc_meddra <- read.delim("~/data/MedDRA_25_0_English/MedAscii/soc.asc", sep="$",
 ```
 
 create a mapping
-1- llt, 2-pt, 3-hlt, 4-hglt, 5-soc, repat with the names
+1- llt, 2-pt, 3-hlt, 4-hglt, 5-soc, repeat with the names
 ```{r}
 meddra_mapping <- llt_meddra[,1:3]
 #add the pt and soc info 
@@ -118,10 +117,11 @@ saveRDS(meddrda_mapping_all, "~/data/MedDRA_mapping_llt_pt_soc.rds" )
 
 # END
     Location of final scripts:
-    
+    src
     Location of data produced:
-    
+    ~/data
     Dates when operations were done:
+    220722
     
 ## Versions
 ```{r}
